chrome/browser/android/compositor/scene_layer/tab_list_scene_layer.h
@@ -112,20 +112,15 @@ class TabListSceneLayer : public SceneLayer {
   SkColor GetBackgroundColor() override;
 
  private:
-  void RemoveAllRemainingTabLayers();
-  void RemoveTabLayersInRange(unsigned start_index, unsigned end_index);
-
-  typedef std::vector<scoped_refptr<TabLayer>> TabLayerList;
-
-  scoped_refptr<TabLayer> GetNextLayer(bool incognito);
+  typedef std::map<int, scoped_refptr<TabLayer>> TabMap;
+  TabMap tab_map_;
+  std::set<int> visible_tabs_this_frame_;
 
   base::android::ScopedJavaGlobalRef<jobject> java_obj_;
   bool content_obscures_self_;
-  unsigned write_index_;
   ui::ResourceManager* resource_manager_;
   LayerTitleCache* layer_title_cache_;
   TabContentManager* tab_content_manager_;
-  TabLayerList layers_;
   SkColor background_color_;
 
   scoped_refptr<cc::Layer> own_tree_;
